<resources>
    <string name="app_name">OprecLogin</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logo">Logo</string>
    <string name="e_mail">e-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="txt_welcome">welcome</string>
    <string name="btn_logout">Logout</string>
</resources>